<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/steak_hintergrund"
    tools:context=".activities.MainActivity">


    <ProgressBar
        android:id="@+id/progressBarBackground"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="285dp"
        android:layout_height="285dp"
        android:progress="100"
        android:progressDrawable="@drawable/circle"
        android:rotation="-90"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarRed"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="285dp"
        android:layout_height="285dp"
        android:progress="0"
        android:progressDrawable="@drawable/circle_red"
        android:rotation="90"
        android:scaleX="-1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="285dp"
        android:layout_height="285dp"
        android:progress="80"
        android:progressDrawable="@drawable/circle_green"
        android:rotation="-90"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="400g"
        android:textColor="@android:color/background_light"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="-500g"
        android:textColor="@color/red"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBalance" />

    <TextView
        android:id="@+id/tvMinusNegative"
        style="@style/tvMinusNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="-500g"

        android:textSize="50dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBalance" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/constrainedLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/undo"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonAcceptMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/accept"
            android:textSize="16dp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainedLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button250"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/anim_button_steak"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button100"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:background="@drawable/anim_button_wurst"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button20"
            app:layout_constraintStart_toEndOf="@+id/button250"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button20"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:background="@drawable/anim_button_2salami"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button10"
            app:layout_constraintStart_toEndOf="@+id/button100"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button10"
            android:layout_width="92dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/anim_button_salami"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvPayday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="23dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/payday"
        android:textColor="@color/decent_white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/anim_button_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/button_explanation"
        android:textColor="@color/decent_white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@android:color/background_light"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBarBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/muelleimer"
        android:fontFamily="sans-serif-black"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDeleteDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/faded"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_square_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/delete_message"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="14dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCommitDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/darker_red"
                    android:text="@string/delete_account"
                    android:textAllCaps="true"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonCancelDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/grey"
                    android:text="@string/cancel"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>