<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/steak_hintergrund"
    tools:context=".activities.CreateAmountActivity">

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-black"
        android:text="500g"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sbAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_square"
        app:layout_constraintBottom_toTopOf="@+id/tvAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/choose_meat"
            android:textAlignment="center"
            android:textColor="@color/text_in_boxes"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <SeekBar
        android:id="@+id/sbAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar_style"
        android:scrollbarSize="50dp"
        android:splitTrack="false"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/accept"
        android:textAllCaps="false"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbAmount" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darker_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivSteak2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSpeech"
            app:srcCompat="@drawable/steak500" />


        <ImageView
            android:id="@+id/ivStats"
            android:layout_width="350dp"
            android:layout_height="178dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tvWelcomeSpeech"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/stats_screen" />

        <ImageView
            android:id="@+id/ivInfo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSpeech"
            app:srcCompat="@drawable/info_icon_pressed" />

        <ImageView
            android:id="@+id/iv20"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSpeech"
            app:layout_constraintVertical_bias="0.25"
            app:srcCompat="@drawable/anim_button_2salami" />

        <ImageView
            android:id="@+id/iv100"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tvWelcomeSpeech"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85"
            app:srcCompat="@drawable/anim_button_wurst" />

        <ImageView
            android:id="@+id/ivAccount"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSpeech"
            app:srcCompat="@drawable/account_screen" />

        <ImageView
            android:id="@+id/ivSteak"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/ivStats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/steak500" />

        <ImageView
            android:id="@+id/ivBigFingerTap"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/finger_tap_big" />

        <TextView
            android:id="@+id/tvWelcomeSpeech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/welcome1"
            android:textAlignment="center"
            android:textColor="@color/accent_in_green"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>